syntax = "proto3";
option java_multiple_files = true;
package org.kafkagrpcproxy;

message Credentials {
    string userId = 1;
}

message RegisterProducerRequest {
    Credentials credentials = 1;
    string topic = 2;
}

message RegisterProducerResponse {
    string clientId = 1;
}

message RegisterConsumerRequest {
    Credentials credentials = 1;
    string groupId = 2;
    string topic = 3;
    bool autoAck = 4;
}

message RegisterConsumerResponse {
    string clientId = 1;
}

message ProduceRequest {
    KafkaMessage message = 1;
}

message ProduceResponse {
    ResponseCode responseCode = 1;
    int64 offset = 2;
}

message ProduceFastAckRequest {
    KafkaMessage message = 1;
}

message ProduceFastAckResponse {
    ResponseCode responseCode = 1;
}

message ConsumeRequest {
    int64 maxMessagesToReturn = 1;
}

message KafkaMessage {
    int64 timestamp = 1;
    string messageKey = 2;
    string messageContent = 3;
}

message ConsumeResponse {
    repeated KafkaMessage messages = 1;
}

enum ResponseCode {
    OK = 0;
    FAILED = 1;
}

service KafkaProxyService {
    rpc produce(ProduceRequest) returns (ProduceResponse);
    rpc produceFastAck(ProduceFastAckRequest) returns (ProduceFastAckResponse);
    rpc registerProducer(RegisterProducerRequest) returns (RegisterProducerResponse);
    rpc registerConsumer(RegisterConsumerRequest) returns (RegisterConsumerResponse);
    rpc consume(ConsumeRequest) returns (ConsumeResponse);
}